Implemented new router. It closes issue #36.
