# authorization/router.go
@@ -5,38 +5,25 @@
 package authorization
 
 import (
-	"github.com/dmalix/financelime-authorization/utils/router"
+	"github.com/dmalix/financelime-authorization/packages/middleware"
+	"github.com/gorilla/mux"
 	"net/http"
 )
 
-func Router(mux *http.ServeMux, handler API, middleware APIMiddleware) {
+func Router(router *mux.Router, handler API, middleware middleware.APIMiddleware) {
 
-	mux.Handle("/v1/signup",
-		router.Group(
-			router.EndPoint(router.Point{Method: http.MethodPost, Handler: handler.signUp()})))
+	router.Handle("/signup", handler.signUp()).Methods(http.MethodPost)
 
-	mux.Handle("/u/",
-		router.Group(
-			router.EndPoint(router.Point{Method: http.MethodGet, Handler: handler.confirmUserEmail()}),
-		))
+	router.Handle("/u/{confirmationKey:[abcefghijkmnopqrtuvwxyz23479]{16}}",
+		handler.confirmUserEmail()).Methods(http.MethodGet)
 
-	mux.Handle("/v1/resetpassword",
-		router.Group(
-			router.EndPoint(router.Point{Method: http.MethodPost, Handler: handler.requestUserPasswordReset()}),
-		))
+	router.Handle("/resetpassword", handler.requestUserPasswordReset()).Methods(http.MethodPost)
 
-	mux.Handle("/v1/oauth/token",
-		router.Group(
-			router.EndPoint(
-				router.Point{Method: http.MethodPost, Handler: handler.createAccessToken()},
-				router.Point{Method: http.MethodPut, Handler: handler.refreshAccessToken()}),
-		))
+	router.Handle("/oauth/token", handler.createAccessToken()).Methods(http.MethodPost)
+	router.Handle("/oauth/token", handler.refreshAccessToken()).Methods(http.MethodPut)
 
-	mux.Handle("/v1/oauth/sessions",
-		router.Group(
-			router.EndPoint(
-				router.Point{Method: http.MethodGet, Handler: handler.getListActiveSessions()},
-				router.Point{Method: http.MethodDelete, Handler: handler.revokeRefreshToken()}),
-			middleware.authorization,
-		))
+	routerSession := router.PathPrefix("/oauth/sessions").Subrouter()
+	routerSession.Use(middleware.Authorization)
+	routerSession.Handle("", handler.getListActiveSessions()).Methods(http.MethodGet)
+	routerSession.Handle("", handler.revokeRefreshToken()).Methods(http.MethodDelete)
 }
